# dataset-streamlit-shell-installer

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
docs/: AGENT_HANDOFF_ML_ENGAGEMENT.md
docs/adr/: 0001-knn-page-uses-plotly-for-click.md
scripts/: smoke_chart_quiz.py  sync-template.ps1
src/add_dataset_streamlit_shell/: __init__.py  __main__.py  cli.py  installer.py
src/add_dataset_streamlit_shell/templates/dataset_streamlit_shell/: .agent_core_activated  __init__.py  agent_loader.py  app.py  classification_ui.py  cnn_ui.py  cv_layout.py  data_ui.py  detection_ui.py  instance_segmentation_ui.py  nn_ui.py  plotting.py  promptable_segmentation_ui.py  regression_model.py  semantic_segmentation_ui.py  svm_ui.py  tree_ui.py  workflow_ui.py  xgboost_ui.py
src/add_dataset_streamlit_shell/templates/dataset_streamlit_shell/cv/: __init__.py  classification.py  detection.py  image_io.py  instance_segmentation.py  mini_cnn.py  promptable_segmentation.py  semantic_segmentation.py
tests/: test_agent_loader.py  test_chart_roles.py  test_classification_model.py  test_cnn_intro.py  test_coffee_nn_model.py  test_cv_classification.py  test_cv_detection.py  test_cv_instance_segmentation.py  test_cv_promptable_segmentation.py  test_cv_semantic_segmentation.py  test_decision_tree_model.py  test_installer.py  test_knn_model.py  test_knn_quiz.py  test_multiple_regression_quiz.py  test_nn_form_state.py  test_plotting.py  test_regression_model.py  test_simple_regression_quiz.py  test_svm_model.py  test_svm_quiz.py  test_user_settings.py  test_xgboost_model.py
(+97 files in other folders)
